--- a/examples/llm/yamls/mosaic_gpt/125m.yaml
+++ b/examples/llm/yamls/mosaic_gpt/125m.yaml
@@ -114,7 +114,7 @@ loggers:
   wandb:
     entity: mosaic-ml
     project: runtime-estimator
-    name: runtime-estimator
+    name: llm-runtime-estimator
 
 # Checkpoint to local filesystem or remote object store
 # save_interval: 500ba
